# Massacre

./: .gitignore  .travis.yml  CMakeLists.txt  CREDITS.md  Makefile  README.md  index.html  package.json  style.css  style.styl
Core/: CMakeLists.txt
Core/include/mcr/: Config.h  CoreExtern.h  Debug.h  Log.h  Log.inl  Platform.h  RefCounted.h  Timer.h  Timer.inl  Types.h
Core/include/mcr/io/: FileStream.h  FileSystem.h  FileSystem.inl  IFile.h  IFileReader.h  IFileWriter.h  IReader.h  IReader.inl  IWriter.h  IWriter.inl  InputStream.h  LineParser.h
Core/include/mcr/math/: Math.h  Matrix.h  Vector.h
Core/src/mcr/: Config.cpp  Debug.cpp  Log.cpp  Timer.cpp
Core/src/mcr/io/: FileSystem.cpp
Gfx/: CMakeLists.txt
Gfx/include/mcr/: GfxExtern.h  IPlugin.h  PluginManager.h
Gfx/include/mcr/gfx/: Camera.h  Camera.inl  Renderer.h  Renderer.inl
Gfx/include/mcr/gfx/geom/: Geometry.h  IGeometryExporter.h  IGeometryImporter.h  Mesh.h  MeshManager.h  VertexFormat.h  VertexFormat.inl
Gfx/include/mcr/gfx/geom/mem/: IVideoMemory.h  NaiveMemory.h  SystemMemory.h
Gfx/include/mcr/gfx/mtl/: IImageImporter.h  IShaderPreprocessor.h  Image.h  Image.inl  ImageFormat.h  Manager.h  Manager.inl  Material.h  Material.inl  Param.h  Param.inl  ParamBuffer.h  ParamBuffer.inl  ParamBufferBase.h  ParamBufferBase.inl  ParamLayout.h  ParamLayout.inl  ParamType.h  ParamType.inl  RenderState.h  RenderState.inl  Shader.h  Shader.inl  Texture.h  Texture.inl  TextureFormat.h  TextureType.h
Gfx/src/: Universe.cpp  Universe.h
Gfx/src/mcr/: PluginManager.cpp
Gfx/src/mcr/gfx/: Camera.cpp  GLEnums.inl  GLState.cpp  GLState.h  Renderer.cpp
Gfx/src/mcr/gfx/geom/: Mesh.cpp  VertexFormat.cpp
Gfx/src/mcr/gfx/geom/mem/: NaiveMemory.cpp
Gfx/src/mcr/gfx/mtl/: Image.cpp  ImageFormat.cpp  Manager.cpp  Material.cpp  ParamBuffer.cpp  ParamUploadFn.h  Shader.cpp  ShaderPreprocessor.cpp  ShaderPreprocessor.h  Texture.cpp
MassacreProto/: .gitignore  CMakeLists.txt  MassacreProto.sln  MassacreProto.vcxproj  MassacreProto.vcxproj.filters  MassacreProto.vcxproj.user.editme
MassacreProto/include/: Animation.h  AnimationController.h  AnimationCurve.h  Application.h  Binder.h  CMakeLists.txt  Camera.h  Channel.h  ClassInfo.h  ComRegistry.h  Component.h  Config.h  Debug.h  FieldTree.h  FileSystem.h  FnTraits.h  IPlugin.h  Io.h  Object.h  SmallObject.h  SuperGlobal.h  Timeline.h  Timer.h  Timer.inl  WorldAction.h
MassacreProto/include/components/: Hierarchy.h  Model.h  Movement.h  Render.h  Transform.h
MassacreProto/include/events/: Event.h  EventArray.h  EventListener.h  EventParams.h  EventTarget.h
MassacreProto/include/gfx/: Context.h  Font.h  GBuffer.h  GBuffer.inl  GLUtility.h  GPool.h  GType.h  ISprite.h  Image.h  Image.inl  ImageFormat.h  Material.h  MaterialManager.h  Mesh2.h  RenderAtom.h  RenderState.h  Renderer.h  Shader.h  Shader.inl  ShaderProgram.h  Texture.h  UniformSlot.h  VertexArray.h  VertexFormat.h  VertexFormat.inl  VertexPool.h
MassacreProto/include/gfx/experimental/: IImageImporter.h  IMeshExporter.h  IMeshImporter.h  IMeshLoader.h  IMeshSaver.h  Mesh.h  MeshStorage.h
MassacreProto/include/gfx/renderables/: Mesh.h  Renderable.h  SpriteBatch.h
MassacreProto/include/mcr/: Camera.h  Config.h  Debug.h  ExternalSingleton.h  FileSystem.h  IPlugin.h  Io.h  Timer.h  Timer.inl
MassacreProto/include/mcr/gfx/: Camera.h  Camera.inl  Context.h  Context.inl  GBuffer.h  GBuffer.inl  GLUtility.h  GType.h  IImageImporter.h  IMeshExporter.h  IMeshImporter.h  IShaderPreprocessor.h  ISprite.h  Image.h  ImageFormat.h  Material.h  Material.inl  MaterialManager.h  MaterialManager.inl  MaterialParameter.h  MaterialParameter.inl  MaterialParameterBuffer.h  MaterialParameterBuffer.inl  Mesh.h  MeshLoader.h  OldMeshes.h  RenderAtom.h  RenderState.h  RenderState.inl  Renderer.h  Renderer.inl  Shader.h  Shader.inl  ShaderProgram.h  Texture.h  VertexArray.h  VertexFormat.h
MassacreProto/include/mcr/gfx/experimental/: GeometryBuffer.h  IImageImporter.h  IMeshExporter.h  IMeshImporter.h  MaterialParameter.h  MaterialParameter.inl  Mesh.h  MeshStorage.h
MassacreProto/include/mcr/gfx/renderables/: Mesh.h  Renderable.h  SpriteBatch.h
MassacreProto/src/: BeginInternal.h  CMakeLists.txt  Camera.cpp  ComRegistry.cpp  Config.cpp  Debug.cpp  EndInternal.h  FileSystem.cpp  GLState.h  Object.cpp  SmallObject.cpp  SuperGlobal.cpp  Timeline.cpp  Timer.cpp  Universe.h  main.cpp
MassacreProto/src/components/: Hierarchy.cpp  Model.cpp  Movement.cpp  Render.cpp  Transform.cpp
MassacreProto/src/gfx/: Camera.cpp  Context.cpp  Font.cpp  GBuffer.cpp  GLEnums.inl  GLState.cpp  GLUtility.cpp  GPool.cpp  GType.cpp  Image.cpp  ImageFormat.cpp  Material.cpp  MaterialManager.cpp  MaterialParameterBuffer.cpp  MaterialParameterUploadFn.h  Mesh2.cpp  MeshLoader.cpp  OldMeshes.cpp  RenderState.cpp  Renderer.cpp  Shader.cpp  ShaderPreprocessor.cpp  ShaderPreprocessor.h  ShaderProgram.cpp  SimpleMeshExporter.cpp  SimpleMeshImporter.cpp  Texture.cpp  VertexArray.cpp  VertexFormat.cpp  VertexPool.cpp
MassacreProto/src/gfx/experimental/: GeometryBuffer.cpp  SimpleMeshExporter.cpp  SimpleMeshExporter.h  SimpleMeshImporter.cpp  SimpleMeshImporter.h  SimpleMeshLoader.cpp  SimpleMeshLoader.h  SimpleMeshSaver.cpp  SimpleMeshSaver.h
MassacreProto/src/gfx/renderables/: Mesh.cpp  Renderable.cpp  SpriteBatch.cpp
MassacreShared/: CMakeLists.txt
MassacreShared/include/: CMakeLists.txt  MassacreBuildConfig.h  MassacreTypes.h  NonCopyable.h  RefCounted.h
MassacreShared/include/bb/: ByteBuffer.h  Manips.h
MassacreShared/include/math/: Expr.h  Grid.h  Math.h  Matrix.h  Rect.h  Vector.h
MassacreShared/include/mcr/: MassacreBuildConfig.h  MassacreTypes.h  RefCounted.h  Types.h
MassacreShared/include/mcr/bb/: ByteBuffer.h  Manips.h
MassacreShared/include/mcr/math/: Grid.h  Math.h  Matrix.h  Rect.h  Vector.h
Samples/: CMakeLists.txt
Samples/src/: Demo.cpp  demo.cpp
_layouts/: default.html
cmake-scripts/: FindGLEW.cmake  FindGLFW.cmake  FindYamlCpp.cmake
cmake-scripts/SDL-1.2.15/: CMakeLists.txt
(+3 files in other folders)
